[gd_scene load_steps=4 format=3 uid="uid://cl6kiaut73j76"]

[ext_resource type="Script" path="res://deck_manager/scenes/deck_example.gd" id="1_8gv6v"]
[ext_resource type="PackedScene" uid="uid://covtena8b31cr" path="res://deck_manager/deck_manager.tscn" id="2_mxrri"]
[ext_resource type="PackedScene" uid="uid://ccsbaagnx5eqm" path="res://deck_manager/scenes/card.tscn" id="3_xysm0"]

[node name="deck_example" type="Node2D" node_paths=PackedStringArray("deck_manager", "cards_left_counter", "flip_button", "card")]
script = ExtResource("1_8gv6v")
deck_manager = NodePath("DeckManager")
cards_left_counter = NodePath("Cards Left Counter")
flip_button = NodePath("Flip Button")
card = NodePath("Card")

[node name="DeckManager" parent="." instance=ExtResource("2_mxrri")]
position = Vector2(346, 275)

[node name="Card" parent="." instance=ExtResource("3_xysm0")]
position = Vector2(510, 275)

[node name="Cards Left Label" type="Label" parent="."]
offset_left = 294.0
offset_top = 122.0
offset_right = 377.0
offset_bottom = 145.0
text = "Cards Left:"

[node name="Cards Left Counter" type="Label" parent="."]
offset_left = 328.0
offset_top = 142.0
offset_right = 368.0
offset_bottom = 165.0
text = "52"

[node name="Flip Button" type="Button" parent="."]
offset_left = 304.0
offset_top = 385.0
offset_right = 423.0
offset_bottom = 418.0
disabled = true
text = "Flip"

[node name="Shuffle Button" type="Button" parent="."]
offset_left = 305.0
offset_top = 427.0
offset_right = 424.0
offset_bottom = 460.0
text = "Shuffle"

[node name="Deal Button" type="Button" parent="."]
offset_left = 433.0
offset_top = 384.0
offset_right = 552.0
offset_bottom = 417.0
text = "Deal"

[node name="Next Button" type="Button" parent="."]
offset_left = 432.0
offset_top = 427.0
offset_right = 551.0
offset_bottom = 460.0
text = "Discard"

[connection signal="pressed" from="Flip Button" to="." method="_on_flip_button_pressed"]
[connection signal="pressed" from="Shuffle Button" to="." method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="Deal Button" to="." method="_on_deal_button_pressed"]
[connection signal="pressed" from="Next Button" to="." method="_on_next_button_pressed"]
